--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -286,6 +286,7 @@ config MACH_NURI
 	select S5P_DEV_G2D
 	select S5P_DEV_MFC
 	select S5P_DEV_USB_EHCI
+	select S3C_DEV_USB_HSOTG
 	select S5P_SETUP_MIPIPHY
 	select EXYNOS4_DEV_DMA
 	select EXYNOS4_SETUP_FIMC
