mali: config: Add Streamline Support
Add CONFIG_TRACEPOINTS to fix compile errors

Signed-off-by: Sangwook Lee <sangwook.lee@linaro.org>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1316,7 +1316,7 @@ config PROFILING
 # dynamically changed for a probe function.
 #
 config TRACEPOINTS
-	bool
+	bool "Tracepoints support"
 
 source "arch/Kconfig"
 
