configs: origen: Increase CMA region size to 32 MB
Signed-off-by: Tushar Behera <tushar.behera@linaro.org>

--- a/configs/origen.conf
+++ b/configs/origen.conf
@@ -22,6 +22,7 @@ CONFIG_NEON=y
 CONFIG_PM_RUNTIME=y
 CONFIG_RFKILL=y
 CONFIG_RFKILL_GPIO=y
+CONFIG_CMA_SIZE_MBYTES=32
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
