configs: origen: Enable support for touch-screen driver
Signed-off-by: Tushar Behera <tushar.behera@linaro.org>

--- a/configs/origen.conf
+++ b/configs/origen.conf
@@ -36,6 +36,7 @@ CONFIG_ATH6KL=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_UNIDISPLAY_TS=y
 CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_SAMSUNG=y
