--- a/arch/arm/configs/exynos4_defconfig
+++ b/arch/arm/configs/exynos4_defconfig
@@ -33,6 +33,8 @@ CONFIG_PM_RUNTIME=y
 CONFIG_NET=y
 CONFIG_INET=y
 CONFIG_IP_PNP=y
+CONFIG_IPV6=y
+CONFIG_CFG80211=y
 CONFIG_RFKILL=y
 CONFIG_RFKILL_GPIO=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
