configs: origen: Enable POWER_SUPPLY support
Signed-off-by: Tushar Behera <tushar.behera@linaro.org>

--- a/configs/origen.conf
+++ b/configs/origen.conf
@@ -46,6 +46,7 @@ CONFIG_I2C_S3C2410=y
 CONFIG_THERMAL=y
 CONFIG_CPU_THERMAL=y
 CONFIG_SENSORS_EXYNOS4_TMU=y
+CONFIG_POWER_SUPPLY=y
 CONFIG_MFD_MAX8997=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_DUMMY=y
