--- a/arch/arm/configs/ubuntu_vexpress_defconfig
+++ b/arch/arm/configs/ubuntu_vexpress_defconfig
@@ -47,6 +47,7 @@ CONFIG_SYN_COOKIES=y
 # CONFIG_INET_LRO is not set
 CONFIG_IPV6=y
 CONFIG_NETLABEL=y
+# CONFIG_ANDROID_PARANOID_NETWORK is not set
 CONFIG_NETFILTER=y
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DEVTMPFS=y
