drivers: exynos: camera2.0 - change Makefile for camera2.0
Change-Id: Id4606d3504d086b0c6d9a0c6baa1961160919103
Signed-off-by: Jiyoung Shin <idon.shin@samsung.com>

--- a/drivers/media/video/exynos/Makefile
+++ b/drivers/media/video/exynos/Makefile
@@ -8,5 +8,6 @@ obj-$(CONFIG_VIDEO_EXYNOS_MFC)	+= mfc/
 obj-$(CONFIG_VIDEO_EXYNOS_TV)		+= tv/
 obj-$(CONFIG_VIDEO_EXYNOS_ROTATOR)	+= rotator/
 obj-$(CONFIG_VIDEO_EXYNOS5_FIMC_IS)	+= fimc-is-mc/
+obj-$(CONFIG_VIDEO_EXYNOS5_FIMC_IS2)	+= fimc-is-mc2/
 
 EXTRA_CLAGS += -Idrivers/media/video
