drivers: exynos: camera2.0 - change Kconfig to select camera1.0 and camera2.0
Change-Id: I0334f764363d9a7571827557bf5202373c960113
Signed-off-by: Jiyoung Shin <idon.shin@samsung.com>

--- a/drivers/media/video/exynos/Kconfig
+++ b/drivers/media/video/exynos/Kconfig
@@ -19,8 +19,22 @@ if VIDEO_EXYNOS
 	source "drivers/media/video/exynos/mfc/Kconfig"
 	source "drivers/media/video/exynos/tv/Kconfig"
 	source "drivers/media/video/exynos/rotator/Kconfig"
-	source "drivers/media/video/exynos/fimc-is-mc/Kconfig"
 endif
+
+choice
+depends on VIDEO_EXYNOS
+prompt "FIMC_IS(Image Signal Process) version"
+default VIDEO_EXYNOS5_FIMC_IS
+config VIDEO_EXYNOS5_FIMC_IS
+	bool "Camera 1.0"
+	help
+		This will be use fimc_is_mc for camera 1.0
+
+config VIDEO_EXYNOS5_FIMC_IS2
+	bool "Camera 2.0"
+	help
+		This will be use fimc_is_mc2 for camera 2.0
+endchoice
 
 config MEDIA_EXYNOS
 	bool
